--- a/c06/homework.html
+++ b/c06/homework.html
@@ -31,3 +31,186 @@
     </script>
   </body>
 </html>
+
+//zadaca 2
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Book List</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+      }
+    </style>
+    body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+    }
+  </head>
+  <body>
+    <ol id="book-list">
+      <li>The Great Gatsby</li>
+      <li>To Kill a Mockingbird</li>
+      <li>1984</li>
+      <li>The Catcher in the Rye</li>
+      <li>Animal Farm</li>
+      <li>Brave New World</li>
+      <li>Fahrenheit 451</li>
+      <li>Lord of the Flies</li>
+      <li>The Hobbit</li>
+      <li>Harry Potter and the Sorcerer's Stone</li>
+    </ol>
+
+<script>
+    function oddListElements(){
+        const listItems = document.querySelectorAll('#book-list li');
+        listItems.forEach((item, index) => {
+            if (index % 2 !== 0) {
+                item.style.backgroundColor = 'lightblue';
+            }
+        });
+    }
+    function changeBookTitle(orderedList, oldTitle, newTitle){
+        const listItems = orderedList.querySelectorAll('li');
+        listItems.forEach(item => {
+            if (item.textContent === oldTitle){
+                item.textContent = newTitle;
+            }
+        });
+
+        function removeBook(orderedList, bookTitle){
+            const listItems = orderedList.querySelectorAll('li');
+            listItems.forEach(item => {
+                if (item.textContent === bookTitle) {
+                    item.remove();
+                }
+            });
+        }
+    }
+    oddListElements();
+    changeBookTitle(document.getElementById('book-list'), '1984', 'Brave New World 2');
+    removeBook(document.getElementById('book-list'), 'To Kill a Mockingbird');
+</script>
+  </body>
+</html>
+
+//zadaca 3
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Interactive Quiz</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    #quiz-container {
+      background-color: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 400px;
+      text-align: center;
+    }
+
+    .question {
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+
+    .options {
+      list-style: none;
+      padding: 0;
+    }
+
+    .option {
+      margin: 10px 0;
+    }
+
+    label {
+      cursor: pointer;
+    }
+
+    input[type="radio"] {
+      margin-right: 10px;
+    }
+
+    button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      background-color: #28a745;
+      color: white;
+      border: none;
+      border-radius: 5px;
+    }
+
+    button:hover {
+      background-color: #218838;
+    }
+  </style>
+</head>
+<body>
+
+  <div id="quiz-container">
+    <div class="question" id="question"></div>
+    <ul class="options" id="options"></ul>
+    <button id="next-button">Next Question</button>
+  </div>
+
+  <script>
+    const quizData = [
+      {
+        question: "What is the capital of France?",
+        options: ["Berlin", "Madrid", "Paris", "Rome"],
+        correctAnswer: "Paris",
+      },
+      {
+        question: "Which planet is known as the Red Planet?",
+        options: ["Earth", "Mars", "Jupiter", "Venus"],
+        correctAnswer: "Mars",
+      },
+      {
+        question: "What is the largest mammal on Earth?",
+        options: ["Elephant", "Blue Whale", "Giraffe", "Hippopotamus"],
+        correctAnswer: "Blue Whale",
+      },
+      {
+        question: "In which year did the Titanic sink?",
+        options: ["1905", "1912", "1920", "1931"],
+        correctAnswer: "1912",
+      },
+      {
+        question: "Who wrote 'Romeo and Juliet'?",
+        options: ["Charles Dickens", "Jane Austen", "William Shakespeare", "Mark Twain"],
+        correctAnswer: "William Shakespeare",
+      },
+    ];
+
+    let currentQuestionIndex = 0;
+    let score = 0;
+
+   
